--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="selBoton"> Seleccionar </string>
     <string name="ntelefonoes"> El  número de telefono seleccionado es:</string>
     <string name="continuar">Continuar</string>
+    <string name="nBD">Nueva BD</string>
     <string name="foto_app">Foto APP</string>
     <string name="texto_OTP">Introduce la Clave OTP :</string>
     <string name="clave_OTP">Clave OTP </string>
